add redirect to /login route
