# src/handlers/login_handler.rs
@@ -1,11 +1,10 @@
 use crate::models::{login::LoginRequest, services_config::ServicesConfig};
 use axum::{
     Json,
-    http::{Response as HttpResponse, StatusCode},
-    response::IntoResponse,
+    http::{HeaderMap, HeaderValue, StatusCode, header::SET_COOKIE},
+    response::{IntoResponse, Redirect},
 };
 use cookie::Cookie;
-use http::header::SET_COOKIE;
 use std::sync::Arc;
 use uuid::Uuid;
 
@@ -28,22 +27,23 @@ pub async fn authenticate_user(
             return StatusCode::INTERNAL_SERVER_ERROR.into_response();
         }
 
-        let cookie = Cookie::build(("Session ID", &session_id))
+        let cookie = Cookie::build(("session_id", &session_id))
             .path("/")
             .max_age(cookie::time::Duration::seconds(ttl as i64))
             .http_only(true)
-            .secure(false);
+            .secure(true)
+            .same_site(cookie::SameSite::None);
 
-        let json = match serde_json::to_string(&user) {
-            Ok(json) => json,
-            Err(_) => return StatusCode::INTERNAL_SERVER_ERROR.into_response(),
-        };
+        let mut headers = HeaderMap::new();
+        headers.insert(
+            SET_COOKIE,
+            HeaderValue::from_str(&cookie.to_string()).unwrap(),
+        );
 
-        HttpResponse::builder()
-            .status(StatusCode::OK)
-            .header(SET_COOKIE, cookie.to_string())
-            .body(json.into())
-            .unwrap_or_else(|_| StatusCode::INTERNAL_SERVER_ERROR.into_response())
+        let redirect_url = "http://localhost:5173/app";
+        let redirect = Redirect::to(redirect_url);
+
+        (headers, redirect).into_response()
     } else {
         StatusCode::UNAUTHORIZED.into_response()
     }
